--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^12.0.4",
     "@testing-library/user-event": "^12.0.9",
     "axios": "^1.5.1",
+    "firebase": "^8.2.3",
     "gapi-script": "^1.2.0",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.0",
@@ -20,6 +21,7 @@
     "react-scripts": "5.0.1",
     "react-youtube": "^10.1.0",
     "reactjs-social-login": "^2.6.3",
+    "source-map-loader": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
