--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://selmananver.github.io/netflix",
   "name": "netflix",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
