--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://selmananver.github.io/netflix",
+  "homepage": "https://selmananver.github.io/",
   "name": "netflix",
   "version": "0.1.0",
   "private": true,
